--- a/language/core.english.lang
+++ b/language/core.english.lang
@@ -1,7 +1,7 @@
 # core.english.lang
 #   core language messages for eggdrop
 #
-# $Id: core.english.lang,v 1.21 2001/01/31 05:32:31 guppy Exp $
+# $Id: core.english.lang,v 1.22 2001/02/11 17:57:30 guppy Exp $
 
 # General stuff
 0x001,Usage
@@ -150,7 +150,7 @@ Telnet to the bot and enter 'NEW' as your nickname.
 0x604,Hi
 0x605,Goodbye
 0x606,You're banned, goober.
-0x607,Your nick is too long to add right now.
+0x607,NOTICE %s :Your nick was too long and therefore it was truncated to '%s'.\n
 0x608,Introduced to
 0x609,common site
 0x60a,NOTICE %s :Hi %s!  I'm %s, an eggdrop bot.\n
