--- a/language/core.german.lang
+++ b/language/core.german.lang
@@ -6,7 +6,7 @@
 # Modified by Michael for 1.3.25.
 # Modified by rtc for 1.4.0
 #
-# $Id: core.german.lang,v 1.19 2001/01/31 05:32:31 guppy Exp $
+# $Id: core.german.lang,v 1.20 2001/02/11 17:57:31 guppy Exp $
 
 # General stuff
 0x001,Gebrauch
@@ -159,7 +159,7 @@ Baue eine Telnetverbindung zu dem Bot auf und gib 'NEW' als deinen Nickname ein.
 0x604,Hallo
 0x605,Auf Wiedersehen
 0x606,Du bist gebannt, mein Lieber.
-0x607,Dein Nick ist im Moment zu lang um dich aufzunehmen.
+0x607,NOTICE %s :Dein Nick ist zu lange und wurde deshalb in '%s' umgewandelt.\n
 0x608,Bekanntschaft gemacht mit
 0x609,kein eigener Client
 0x60a,NOTICE %s :Hallo %s!  Ich bin %s, ein Eggdrop Bot.\n
