--- a/language/core.german.lang
+++ b/language/core.german.lang
@@ -6,7 +6,7 @@
 # Modified by Michael for 1.3.25.
 # Modified by rtc for 1.4.0
 #
-# $Id: core.german.lang,v 1.21 2001/02/24 20:08:51 guppy Exp $
+# $Id: core.german.lang,v 1.22 2001/03/17 23:20:57 guppy Exp $
 
 # General stuff
 0x001,Gebrauch
@@ -383,7 +383,7 @@ Baue eine Telnetverbindung zu dem Bot auf und gib 'NEW' als deinen Nickname ein.
 0xb50,Du bist wieder auf
 0xb51,Weiterleitung abgebrochen:
 0xb53,DCC-Verbindung verloren zu
-0xb54,Breche Weitereleitungsversuch ab zu
+0xb54,Breche Weiterleitungsversuch ab zu
 0xb55,Erfolg!\n\nDU BIST NUN VERBUNDEN MIT DEM BOT
 0xb56,(Du kannst *BYE* eingeben, um die Verbindung vorzeitig zu trennen.)
 0xb57,Weitergeleitete Verbindung:
@@ -474,4 +474,4 @@ Baue eine Telnetverbindung zu dem Bot auf und gib 'NEW' als deinen Nickname ein.
 0xe30,Ident-Socket beim Wartern auf die Antwort verloren!!
 0xe31,Telnet verweigert: %s, Kein Zugriff
 0xe32,Telnet-Verbindung von %s zurueckgewiesen (versuchte, meinen botnetnick zu benutzen)
-0xe33,Telnet-Verbindung von %s wärend Kontrolle auf Duplikat verloren
+0xe33,Telnet-Verbindung von %s waerend Kontrolle auf Duplikat verloren
