--- a/language/core.english.lang
+++ b/language/core.english.lang
@@ -1,7 +1,7 @@
 # core.english.lang
 #   core language messages for eggdrop
 #
-# $Id: core.english.lang,v 1.23 2001/02/24 20:08:51 guppy Exp $
+# $Id: core.english.lang,v 1.24 2001/04/19 04:49:54 guppy Exp $
 
 # General stuff
 0x001,Usage
@@ -49,8 +49,8 @@
 0x20d,You have installed modules but have not selected an encryption\n\
 module, please consult the default config file for info.\n
 0x20e,Filesys module not loaded.
-0x20f,Module loaded: %s \t\t(with lang support)
-0x210,Module loaded: %s
+0x20f,Module loaded: %-16s (with lang support)
+0x210,Module loaded: %-16s
 
 # USERF_
 0x400,Userlist transfer complete; switched over
