added Kirben's win32 patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.162 2001/07/24 15:08:21 guppy Exp $
+$Id: UPDATES1.6,v 1.163 2001/07/26 03:55:34 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          Kirben    check whether cygwin requires -mwin32 to support
+                    old versions of cygwin
           Kirben    check for bind in /usr/local/bind when using
                     cygwin
 NeoN-	  dw	    a banreason wasn't used in some cases.
