Hm.... I thought md5 was borken ... hehe

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.163 2001/07/26 03:55:34 guppy Exp $
+$Id: UPDATES1.6,v 1.164 2001/07/26 03:59:44 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          TaKaDa    fixed tcl_md5, it was broken on tcl8.1+
           Kirben    check whether cygwin requires -mwin32 to support
                     old versions of cygwin
           Kirben    check for bind in /usr/local/bind when using
