sup's hook die ... this has been needed for years right slennox?

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.165 2001/07/26 21:57:31 guppy Exp $
+$Id: UPDATES1.6,v 1.166 2001/07/29 06:08:03 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          Sup       Added HOOK_DIE to allow tcl_die to have
+                    a quit message.
           TaKeDa    small resync fix
           TaKaDa    fixed tcl_md5, it was broken on tcl8.1+
           Kirben    check whether cygwin requires -mwin32 to support
