yay .... raven will love this patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,13 @@
-$Id: UPDATES1.6,v 1.166 2001/07/29 06:08:03 guppy Exp $
+$Id: UPDATES1.6,v 1.167 2001/07/29 06:15:56 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+|^Raven^| Noyga     PRIVMSGs with the same message to the same destination
+                    are no longer stacked also USERHOST/USERIP are not stacked
+                    using a comma 
           Sup       Added HOOK_DIE to allow tcl_die to have
                     a quit message.
           TaKeDa    small resync fix
