PATCH: eggdrop1.6+dalupd.patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.167 2001/07/29 06:15:56 guppy Exp $
+$Id: UPDATES1.6,v 1.168 2001/08/07 13:42:13 poptix Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          Noyga     Fixes/Additions to command stacking
 |^Raven^| Noyga     PRIVMSGs with the same message to the same destination
                     are no longer stacked also USERHOST/USERIP are not stacked
                     using a comma 
