PATCH: helppatch.diff

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.169 2001/08/07 13:52:36 poptix Exp $
+$Id: UPDATES1.6,v 1.170 2001/08/07 13:55:24 poptix Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          dw        Helpfile says nodesync (invalid mode) instead of nodesynch.
           Zart      makes .whom more handlen friendly
           Noyga     Fixes/Additions to command stacking
 |^Raven^| Noyga     PRIVMSGs with the same message to the same destination
