--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.171 2001/08/09 04:00:26 guppy Exp $
+$Id: UPDATES1.6,v 1.172 2001/08/10 23:14:54 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+various   guppy     the documentation for the need bind was slightly screwy
           Kirben    don't check for static tcl under cygwin
           dw        Helpfile says nodesync (invalid mode) instead of nodesynch.
           Zart      makes .whom more handlen friendly
