I found out ITE's realname ... yay .. yay...

--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -27,7 +27,7 @@
    G`Quann   Florian Sander
    guppy     Jeff Fisher
    Ian       Ian Campbell
-   ITE
+   ITE       Federico Mennite
    Jason     Jason Ede
    Johoho    Wiktor Wodecki
    Kirben    Travis Howell
@@ -47,7 +47,7 @@
    TheGhost
    TheUnknown
    toot      Toby Verrall
-   Tothwolf
+   Tothwolf  
 
    Thanks go to all the people who have made individual contributions to
    the Eggdrop project by sending bug-reports, patches and otherwise have
