*** empty log message ***

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.172 2001/08/10 23:14:54 guppy Exp $
+$Id: UPDATES1.6,v 1.173 2001/08/19 08:28:03 poptix Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          poptix    Oh, look, SIGN and SPLT binds actually pass on the user record now, 
+                    and allow flag bindings =P
 various   guppy     the documentation for the need bind was slightly screwy
           Kirben    don't check for static tcl under cygwin
           dw        Helpfile says nodesync (invalid mode) instead of nodesynch.
