Found by  Fixed by  What... stdarg    poptix    we weren't looking the user record back up on iterations on channels                     in the NICK bind, causing the chance of a bad pointer reference =P                     (stdarg gave me the idea to look =)

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,13 @@
-$Id: UPDATES1.6,v 1.173 2001/08/19 08:28:03 poptix Exp $
+$Id: UPDATES1.6,v 1.174 2001/08/19 09:04:43 poptix Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+stdarg    poptix    we weren't looking the user record back up on iterations on channels
+                    in the NICK bind, causing the chance of a bad pointer reference =P
+                    (stdarg gave me the idea to look =)
           poptix    Oh, look, SIGN and SPLT binds actually pass on the user record now, 
                     and allow flag bindings =P
 various   guppy     the documentation for the need bind was slightly screwy
