don't send server in uptime.mod packets

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.174 2001/08/19 09:04:43 poptix Exp $
+$Id: UPDATES1.6,v 1.175 2001/08/23 00:40:17 poptix Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+proton    poptix    don't bother sending server in the uptime packets
 stdarg    poptix    we weren't looking the user record back up on iterations on channels
                     in the NICK bind, causing the chance of a bad pointer reference =P
                     (stdarg gave me the idea to look =)
