--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.175 2001/08/23 00:40:17 poptix Exp $
+$Id: UPDATES1.6,v 1.176 2001/08/27 23:04:17 poptix Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          BarkerJr  CTCP replies go to the HELP queue..
 proton    poptix    don't bother sending server in the uptime packets
 stdarg    poptix    we weren't looking the user record back up on iterations on channels
                     in the NICK bind, causing the chance of a bad pointer reference =P
