PATCH: wildctcp1.6.patc
Allow wildcard CTCP binding

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.176 2001/08/27 23:04:17 poptix Exp $
+$Id: UPDATES1.6,v 1.177 2001/08/27 23:08:29 poptix Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          BarkerJr  Allow wildcard CTCP binds
           BarkerJr  CTCP replies go to the HELP queue..
 proton    poptix    don't bother sending server in the uptime packets
 stdarg    poptix    we weren't looking the user record back up on iterations on channels
