PATCH: cmb_boot.patch
Fix booting for people with full length handles

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.177 2001/08/27 23:08:29 poptix Exp $
+$Id: UPDATES1.6,v 1.178 2001/08/27 23:13:22 poptix Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+bleah     PPSlim    Fixed booting with full length handles
           BarkerJr  Allow wildcard CTCP binds
           BarkerJr  CTCP replies go to the HELP queue..
 proton    poptix    don't bother sending server in the uptime packets
