here are some backports from 1.7 to 1.6 .. mostly minor

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,13 @@
-$Id: UPDATES1.6,v 1.181 2001/09/23 20:17:46 guppy Exp $
+$Id: UPDATES1.6,v 1.182 2001/09/24 04:25:39 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          guppy     cleaned up our tcl information on .status (backport from 1.7)
+          guppy     removed dcc-portrange since it was useless (backport from 1.7)
+          drummer   show our probably user@host in cmd_status (backport from 1.7)
 various   stdarg    proper utf8 support
           TaKeDa    small wasop fix
           SuperS    small fix for SunOS
