--- a/language/core.french.lang
+++ b/language/core.french.lang
@@ -1,7 +1,7 @@
 # core.french.lang
 #   core language messages for eggdrop
 #
-# $Id: core.french.lang,v 1.19 2001/02/24 20:08:51 guppy Exp $
+# $Id: core.french.lang,v 1.20 2001/09/24 04:25:39 guppy Exp $
 
 
 # General stuff
@@ -117,7 +117,7 @@ consultez le ficher de configuration initiale pour plus de renseignements.\n
 0x52c,mode log
 0x52d,En ligne depuis
 0x52e,cache hit
-0x52f,Utilisation de la librairie Tcl:
+0x52f,librairie Tcl:
 0x530,Les nouveaux utilisateurs obtiennent les drapeaux
 0x531,annonce
 0x532,Proprietaire(s) permanent(s)
@@ -139,8 +139,6 @@ Faites un Telnet sur le bot et entrez 'NEW' comme surnom.
 0x543,No free sockets available.
 0x544,Tcl version:
 0x545,header version
-0x546,Tcl patchlevel:
-0x547,header patchlevel
 
 # IRC_
 0x600,Banni
