--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.183 2001/09/25 23:21:44 guppy Exp $
+$Id: UPDATES1.6,v 1.184 2001/09/26 03:58:19 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          BarkerJr  backported a check for -dynamicbans to new[ban|exempt|invite]
           guppy     replaced old md5 routines with new ones (backport from 1.7)
           guppy     cleaned up our tcl information on .status (backport from 1.7)
           guppy     removed dcc-portrange since it was useless (backport from 1.7)
