--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.186 2001/09/28 14:07:25 guppy Exp $
+$Id: UPDATES1.6,v 1.187 2001/09/29 06:33:20 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          Tothwolf  added missing memory check for tclmisc.c
 Tothwolf  guppy     new setting: pidfile (detaults to pid.botnetnick)
           poptix    oops, .kickban -nick didn't work.
           BarkerJr  backported a check for -dynamicbans to new[ban|exempt|invite]
