Revert broken eggdrop1.6+sunfix.patch (why was this applied?)

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,4 +1,4 @@
-$Id: UPDATES1.6,v 1.187 2001/09/29 06:33:20 guppy Exp $
+$Id: UPDATES1.6,v 1.188 2001/09/30 05:15:05 tothwolf Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
@@ -15,7 +15,6 @@ Tothwolf  guppy     new setting: pidfile (detaults to pid.botnetnick)
           drummer   show our probably user@host in cmd_status (backport from 1.7)
 various   stdarg    proper utf8 support
           TaKeDa    small wasop fix
-          SuperS    small fix for SunOS
 bleah     PPSlim    Fixed booting with full length handles
           BarkerJr  Allow wildcard CTCP binds
           BarkerJr  CTCP replies go to the HELP queue..
