*** empty log message ***

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.188 2001/09/30 05:15:05 tothwolf Exp $
+$Id: UPDATES1.6,v 1.189 2001/10/07 14:27:01 poptix Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          poptix    properly check argv[]/argc before using it
           Tothwolf  added missing memory check for tclmisc.c
 Tothwolf  guppy     new setting: pidfile (detaults to pid.botnetnick)
           poptix    oops, .kickban -nick didn't work.
