--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.189 2001/10/07 14:27:01 poptix Exp $
+$Id: UPDATES1.6,v 1.190 2001/10/09 10:55:06 tothwolf Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          Tothwolf  fixed typo in filedb3.c: EBUG_MEM -> DEBUG_MEM
+          Tothwolf  removed extra egg_bzero call from filesys.c
           poptix    properly check argv[]/argc before using it
           Tothwolf  added missing memory check for tclmisc.c
 Tothwolf  guppy     new setting: pidfile (detaults to pid.botnetnick)
