fix overflow in adduser, free what we malloc

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.192 2001/10/14 15:06:34 tothwolf Exp $
+$Id: UPDATES1.6,v 1.193 2001/10/14 16:12:57 poptix Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          poptix    re-fix adduser overflow
           Tothwolf  don't attempt to flood check server notices
           Tothwolf  display global bans, exempts and invites even if
                     not on a channel
