* Bad argv[] use in tcl_userlist

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.193 2001/10/14 16:12:57 poptix Exp $
+$Id: UPDATES1.6,v 1.194 2001/10/17 01:58:34 poptix Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          poptix    bad pointers are evil in tcl_userlist
           poptix    re-fix adduser overflow
           Tothwolf  don't attempt to flood check server notices
           Tothwolf  display global bans, exempts and invites even if
