small fix by stdarg to prevent sendnote from crashing the notes module

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.194 2001/10/17 01:58:34 poptix Exp $
+$Id: UPDATES1.6,v 1.195 2001/10/19 21:12:54 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+various   stdarg    fixed a potential sendnote crash when the notes module
+                    is unloaded
           poptix    bad pointers are evil in tcl_userlist
           poptix    re-fix adduser overflow
           Tothwolf  don't attempt to flood check server notices
