oops, I should use the proper words in UPDATES1.6 eh?

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,4 +1,4 @@
-$Id: UPDATES1.6,v 1.195 2001/10/19 21:12:54 guppy Exp $
+$Id: UPDATES1.6,v 1.196 2001/10/19 22:53:54 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
@@ -25,7 +25,7 @@ Tothwolf  guppy     new setting: pidfile (detaults to pid.botnetnick)
           guppy     replaced old md5 routines with new ones (backport from 1.7)
           guppy     cleaned up our tcl information on .status (backport from 1.7)
           guppy     removed dcc-portrange since it was useless (backport from 1.7)
-          drummer   show our probably user@host in cmd_status (backport from 1.7)
+          drummer   show our proper user@host in cmd_status (backport from 1.7)
 various   stdarg    proper utf8 support
           TaKeDa    small wasop fix
 bleah     PPSlim    Fixed booting with full length handles
