a patch by Sup to export some module functions

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.196 2001/10/19 22:53:54 guppy Exp $
+$Id: UPDATES1.6,v 1.197 2001/10/20 19:03:08 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+DrDeath   Sup       Exported module_load and module_unload for modules.
 various   stdarg    fixed a potential sendnote crash when the notes module
                     is unloaded
           poptix    bad pointers are evil in tcl_userlist
