Couple of things while getting ready for 1.6.7 -- still gotta fix that stupid banreason bug <g> hehe ... what else needs to be fixed before 1.6.7 is done?

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.197 2001/10/20 19:03:08 guppy Exp $
+$Id: UPDATES1.6,v 1.198 2001/10/29 20:20:31 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          fuchs     don't get GO if the channel is -cycle
+          guppy     couple of small uptime.mod backports from 1.7
 DrDeath   Sup       Exported module_load and module_unload for modules.
 various   stdarg    fixed a potential sendnote crash when the notes module
                     is unloaded
