--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.198 2001/10/29 20:20:31 guppy Exp $
+$Id: UPDATES1.6,v 1.199 2001/10/30 03:01:01 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+zip       guppy     small fix for ircu servers that send ERROR: instead of ERROR :
           fuchs     don't get GO if the channel is -cycle
           guppy     couple of small uptime.mod backports from 1.7
 DrDeath   Sup       Exported module_load and module_unload for modules.
