good thing Daniel Frank sent in a bug report on this one -- and good job stdarg on the quick fix :) Lets go 1.6.7! Lets go!

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.200 2001/10/30 16:04:07 poptix Exp $
+$Id: UPDATES1.6,v 1.201 2001/10/31 02:20:55 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+dfrank    stdarg    'chattr hand' no longer crashes (legacy bug)
           poptix    this should fix the banreason bug (Hey, i tested it too)
 zip       guppy     small fix for ircu servers that send ERROR: instead of ERROR :
           fuchs     don't get GO if the channel is -cycle
