more (all of?) the argv mis-usage

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.201 2001/10/31 02:20:55 guppy Exp $
+$Id: UPDATES1.6,v 1.202 2001/10/31 15:22:48 poptix Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+	  poptix    even more fixes for usage of argv[] (crashes)
 dfrank    stdarg    'chattr hand' no longer crashes (legacy bug)
           poptix    this should fix the banreason bug (Hey, i tested it too)
 zip       guppy     small fix for ircu servers that send ERROR: instead of ERROR :
