--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,11 +1,12 @@
-$Id: UPDATES1.6,v 1.202 2001/10/31 15:22:48 poptix Exp $
+$Id: UPDATES1.6,v 1.203 2001/10/31 16:54:07 poptix Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
-	  poptix    even more fixes for usage of argv[] (crashes)
+	  poptix    and more (tcldcc.c)
+	  poptix    even more fixes for usage of argv[] (crashes in tcluser.c)
 dfrank    stdarg    'chattr hand' no longer crashes (legacy bug)
           poptix    this should fix the banreason bug (Hey, i tested it too)
 zip       guppy     small fix for ircu servers that send ERROR: instead of ERROR :
