--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.203 2001/10/31 16:54:07 poptix Exp $
+$Id: UPDATES1.6,v 1.204 2001/10/31 17:46:41 poptix Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+	  poptix    more.. (rest of src/*.c)
 	  poptix    and more (tcldcc.c)
 	  poptix    even more fixes for usage of argv[] (crashes in tcluser.c)
 dfrank    stdarg    'chattr hand' no longer crashes (legacy bug)
