a couple or three small patches by Wcc and Sup .. 1.6.7's changelog just keeps growing folks :P~ 1.6.8 you better not show your ugly face for atleast 3 months!!!

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,13 +1,15 @@
-$Id: UPDATES1.6,v 1.204 2001/10/31 17:46:41 poptix Exp $
+$Id: UPDATES1.6,v 1.205 2001/11/03 21:58:17 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
-	  poptix    more.. (rest of src/*.c)
-	  poptix    and more (tcldcc.c)
-	  poptix    even more fixes for usage of argv[] (crashes in tcluser.c)
+          Wcc       small fix to let tcl_adduser accept only a handle
+FeaRx/    Sup       show `#channel is active but has no ops :(' only if channel
+DarkReap1           is set +statuslog.
+          Wcc       fixed up some spelling mistakes in tcl-commands.doc
+          poptix    lots of argv[] fixes that caused crashes
 dfrank    stdarg    'chattr hand' no longer crashes (legacy bug)
           poptix    this should fix the banreason bug (Hey, i tested it too)
 zip       guppy     small fix for ircu servers that send ERROR: instead of ERROR :
