--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.207 2001/11/04 09:23:34 guppy Exp $
+$Id: UPDATES1.6,v 1.208 2001/11/05 03:54:35 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+guppy     stdarg    tcl_chattr now lets you remove global flags
 various   stdarg    fixed some issues with utf8 dealing with how we handle tcl
                     arguments
           Wcc       small fix to let tcl_adduser accept only a handle
